# colorgame

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  colorgame.html  config.example.json  config.json.example  example.sh  fly.toml  sqlx-data.json  stations.html
.github/workflows/: pages.yml
frontend/: .gitignore  README.md  colorgame.html  colorgame.js  package.json
frontend/www/: colorgame.html  index.html  stations.html
migrations/: 20220508215326_init.sql
sql/: at.sql
src/: main.rs
