[package]
name = "web1"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1"
log = "0.4"
env_logger = "0.9"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "sqlite", "chrono" ] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rhai = "1"
actix-cors = "0.6.1"
serde_json = "1.0.82"
